--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,22 +1,23 @@
-name: GitHub Profile Summary Cards
+name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+  create:
   push:
-    branches:
-      - main
+  schedule: # execute every 24 hours
+    - cron: "* */24 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: generate
-
+    name: generate-github-cards
+    permissions:
+      contents: write
+      
     steps:
+      - uses: actions/checkout@v2
       - uses: vn7n24fzkq/github-profile-summary-cards@release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          USERNAME: postym
-          THEME: midnight_purple
+          USERNAME: ${{ github.repository_owner }}
